recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:12: error: not found: value SnowFlake
  SnowFlake(10,100)
  ^